2. tecla comprar colocada abaixo e alinhada, sem underline através das propriedades display: block; magin: auto no botão-amarelo e text-decoration: none no marcador universal

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    text-decoration: none;
 }
 
 h2 {
@@ -45,6 +46,8 @@ div img {
     border-radius: 5px;
     font-size: 20px;
     color: white;
+    display: block;
+    margin: auto;
 }
 
 .botao-amarelo:hover {
