12. lista numerada aparecendo através do uso de uma seção div nomeada colocando os elementos em display inline-block

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -187,6 +187,8 @@ ol{
     list-style-type: decimal;
 }
 
-li{
-    display: ;
+#lista{
+    display: inline-block;
+    text-align: left;
+    padding: 1vw 0vw;
 }
